--- a/05-grid/index.html
+++ b/05-grid/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modelo de Cajas - Flex</title>
+    <title>Modelo de Cajas - Grid</title>
 
     <!-- Estilos -->
     <link rel="stylesheet" href="./css/estilos.css" />
   </head>
   <body>
     <main class="container">
-      <h1 class="container__title">Flex</h1>
-      <h2 class="container__subtitle">Ejercicio Flex</h2>
+      <h1 class="container__title">Grid</h1>
+      <h2 class="container__subtitle">Ejercicio Grid</h2>
       <section class="container__layout">
         <div class="layout__box layout__box--peru">Caja Peruano</div>
         <div class="layout__box layout__box--purple">Caja Morada</div>
