--- a/04-maquetacion-flex/index.html
+++ b/04-maquetacion-flex/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maquetación Flex</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>Maquetación Flexbox</title>
+    <link rel="stylesheet" href="CSS/estilos.css">
 </head>
 <body>
     <!-- Inicio contenedor principal -->
     <section class="container">
         <!-- Inicio cabecera -->
         <header class="container__header">
-            <div class="container__logo">
-                <h1>Portafolio</h1>
+            <div class="header__logo">
+                <h1 class="logo__title">Portafolio</h1>
             </div>
             <nav class="header__menu">
                 <ul class="menu__list">
@@ -24,8 +24,8 @@
             </nav>
         </header>
         <!-- Fin cabecera -->
-        <!-- Inicio contenido  -->
-        <section class="content">
+        <!-- inicio contenido -->
+        <section class="container__content">
             <aside class="content__lateral">
                 <h2 class="lateral__title">Qué quieres ver?</h2>
                 <ul class="lateral__list">
@@ -37,81 +37,81 @@
             </aside>
             <div class="content__projects">
                 <article class="projects__project">
-                    <div class="projects__image-wrap">
-                        <img src="https://via.placeholder.com/250x100" alt="img">
+                    <div class="project__image-wrap">
+                        <img src="https://via.placeholder.com/250x100" alt="">
                     </div>
-                    <div class="projects__project-info">
-                        <a href="#">Nombre proyecto</a>
+                    <div class="project__project-info">
+                        <a href="#">Nombre Proyecto</a>
                         <p>Sitio Web</p>
                     </div>
                 </article>
                 <article class="projects__project">
-                    <div class="projects__image-wrap">
-                        <img src="https://via.placeholder.com/250x100" alt="img">
+                    <div class="project__image-wrap">
+                        <img src="https://via.placeholder.com/250x100" alt="">
                     </div>
-                    <div class="projects__project-info">
-                        <a href="#">Nombre proyecto</a>
+                    <div class="project__project-info">
+                        <a href="#">Nombre Proyecto</a>
                         <p>Sitio Web</p>
                     </div>
                 </article>
                 <article class="projects__project">
-                    <div class="projects__image-wrap">
-                        <img src="https://via.placeholder.com/250x100" alt="img">
+                    <div class="project__image-wrap">
+                        <img src="https://via.placeholder.com/250x100" alt="">
                     </div>
-                    <div class="projects__project-info">
-                        <a href="#">Nombre proyecto</a>
+                    <div class="project__project-info">
+                        <a href="#">Nombre Proyecto</a>
                         <p>Sitio Web</p>
                     </div>
                 </article>
                 <article class="projects__project">
-                    <div class="projects__image-wrap">
-                        <img src="https://via.placeholder.com/250x100" alt="img">
+                    <div class="project__image-wrap">
+                        <img src="https://via.placeholder.com/250x100" alt="">
                     </div>
-                    <div class="projects__project-info">
-                        <a href="#">Nombre proyecto</a>
+                    <div class="project__project-info">
+                        <a href="#">Nombre Proyecto</a>
                         <p>Sitio Web</p>
                     </div>
                 </article>
                 <article class="projects__project">
-                    <div class="projects__image-wrap">
-                        <img src="https://via.placeholder.com/250x100" alt="img">
+                    <div class="project__image-wrap">
+                        <img src="https://via.placeholder.com/250x100" alt="">
                     </div>
-                    <div class="projects__project-info">
-                        <a href="#">Nombre proyecto</a>
+                    <div class="project__project-info">
+                        <a href="#">Nombre Proyecto</a>
                         <p>Sitio Web</p>
                     </div>
                 </article>
                 <article class="projects__project">
-                    <div class="projects__image-wrap">
-                        <img src="https://via.placeholder.com/250x100" alt="img">
+                    <div class="project__image-wrap">
+                        <img src="https://via.placeholder.com/250x100" alt="">
                     </div>
-                    <div class="projects__project-info">
-                        <a href="#">Nombre proyecto</a>
+                    <div class="project__project-info">
+                        <a href="#">Nombre Proyecto</a>
                         <p>Sitio Web</p>
                     </div>
                 </article>
                 <article class="projects__project">
-                    <div class="projects__image-wrap">
-                        <img src="https://via.placeholder.com/250x100" alt="img">
+                    <div class="project__image-wrap">
+                        <img src="https://via.placeholder.com/250x100" alt="">
                     </div>
-                    <div class="projects__project-info">
-                        <a href="#">Nombre proyecto</a>
+                    <div class="project__project-info">
+                        <a href="#">Nombre Proyecto</a>
                         <p>Sitio Web</p>
                     </div>
                 </article>
                 <article class="projects__project">
-                    <div class="projects__image-wrap">
-                        <img src="https://via.placeholder.com/250x100" alt="img">
+                    <div class="project__image-wrap">
+                        <img src="https://via.placeholder.com/250x100" alt="">
                     </div>
-                    <div class="projects__project-info">
-                        <a href="#">Nombre proyecto</a>
+                    <div class="project__project-info">
+                        <a href="#">Nombre Proyecto</a>
                         <p>Sitio Web</p>
                     </div>
                 </article>
             </div>
         </section>
-        <!-- Fin contenido  -->
-        <footer class="content__footer">
+        <!-- Fin contenido -->
+        <footer class="container__footer">
             <div class="footer__logoFooter">Portafolio</div>
             <div class="footer__info">CSS - Flexbox &copy; José Miguel Cabezuelo</div>
         </footer>
