--- a/ProyectoWeb-Alumnos/index.html
+++ b/ProyectoWeb-Alumnos/index.html
@@ -47,12 +47,18 @@
                     <p class="card__description">
                         Aprende los principales lenguajes para desarrollar webs. !Conviértete en Web Master!
                     </p>
+                    <p class="card__description1">
+                        Ver más
+                    </p>
                 </div>
                 <div class="cards__card">
                     <p class="card__icon">_</p>
                     <h2 class="card__category">Sistemas Operativos</h2>
                     <p class="card__description">
                         Aprende a administrar sistemas operativos linux y windows.
+                    </p>
+                    <p class="card__description2">
+                        Ver más
                     </p>
                 </div>
                 <div class="cards__card">
@@ -61,6 +67,9 @@
                     <p class="card__description">
                         Conoce los entresijos del hardware.
                     </p>
+                    <p class="card__description3">
+                        Ver más
+                    </p>
                 </div>
                 <div class="cards__card">
                     <p class="card__icon">u</p>
@@ -68,12 +77,18 @@
                     <p class="card__description">
                         Aprende a configurar y administrar redes informáticas y servidores.
                     </p>
+                    <p class="card__description4">
+                        Ver más
+                    </p>
                 </div>
                 <div class="cards__card">
                     <p class="card__icon">a</p>
                     <h2 class="card__category">Bases de Datos</h2>
                     <p class="card__description">
                         Aprende a instalar y administrar bases de datos.
+                    </p>
+                    <p class="card__description5">
+                        Ver más
                     </p>
                 </div>
             </div>
