--- a/Practica_1/index.html
+++ b/Practica_1/index.html
@@ -7,17 +7,16 @@
     <meta name="viewport" content="width=device-width, user-scalable=no"> 
     <title>Mariscos Recio</title>
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/reset_estilos.css">
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="./css/reset_estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
     <!-- Inicio Cabecera -->
     <header class="header">
         <div class="header__wrap">
             <div class="header__logo"> 
-                <span class="logo__gear">S</span>
-                <h3>BLOG</h3>
+                <img class="logo__img" src="./img/logo.png" alt="Mariscos Recio">
             </div>
             <nav class="header__menu">
                 <ul class="menu__list">
@@ -37,60 +36,42 @@
         <section class="content__info">
             <!-- Inicio Banner -->
             <div class="content__banner">
-                <h1>Diseño de CSS por Alumn@</h1>
+                <h1>El mar al mejor precio</h1>
             </div>
             <!-- fin de Banner -->
             <!-- Inicio Tarjetas -->
             <div class="content__cards">
                 <div class="cards__card">
-                    <p class="card__icon">H</p>
-                    <h2 class="card__category">Desarrollo Web</h2>
+                    <img class="card__img" src="./img/corbata-de-lazo.png" alt="Cena de gala">
+                    <h2 class="card__category">Cena de gala</h2>
                     <p class="card__description">
-                        Aprende los principales lenguajes para desarrollar webs. !Conviértete en Web Master!
+                        Si quiere una cena de gala, llévese una cigala.
                     </p>
-                    <p class="card__description1">
-                        Ver más
-                    </p>
+                    <img class="description__img" src="./img/gamba.png" alt="Cigala">
                 </div>
                 <div class="cards__card">
-                    <p class="card__icon">_</p>
-                    <h2 class="card__category">Sistemas Operativos</h2>
+                    <img class="card__img" src="./img/traje-de-boda.png" alt="Evento elegante">
+                    <h2 class="card__category">Evento elegante</h2>
                     <p class="card__description">
-                        Aprende a administrar sistemas operativos linux y windows.
+                        Si quiere un evento elegante, llévese un bogavante.
                     </p>
-                    <p class="card__description2">
-                        Ver más
-                    </p>
+                    <img class="description__img" src="./img/bogavante.png" alt="Bogavante">
                 </div>
                 <div class="cards__card">
-                    <p class="card__icon">S</p>
-                    <h2 class="card__category">Hardware</h2>
+                    <img class="card__img" src="./img/zapatos-de-mujer.png" alt="Noche divina">
+                    <h2 class="card__category">Noche divina</h2>
                     <p class="card__description">
-                        Conoce los entresijos del hardware.
+                        Si quiere una noche divina, cómprese una lubina.
                     </p>
-                    <p class="card__description3">
-                        Ver más
-                    </p>
+                    <img class="description__img" src="./img/lubina.png" alt="Lubina">
                 </div>
                 <div class="cards__card">
-                    <p class="card__icon">u</p>
-                    <h2 class="card__category">Redes e Internet</h2>
+                    <img class="card__img" src="./img/anillos-de-boda.png" alt="Boda fina">
+                    <h2 class="card__category">Boda fina</h2>
                     <p class="card__description">
-                        Aprende a configurar y administrar redes informáticas y servidores.
+                        Si quiere una boda fina, llévese una sardina.
                     </p>
-                    <p class="card__description4">
-                        Ver más
-                    </p>
-                </div>
-                <div class="cards__card">
-                    <p class="card__icon">a</p>
-                    <h2 class="card__category">Bases de Datos</h2>
-                    <p class="card__description">
-                        Aprende a instalar y administrar bases de datos.
-                    </p>
-                    <p class="card__description5">
-                        Ver más
-                    </p>
+                    <img class="description__img" src="./img/sardina.png" alt="Sardina">
                 </div>
             </div>
             <!-- fin de Tarjetas -->
@@ -146,8 +127,9 @@
         <!-- fin de Aside -->
         <!-- Inicio de los Artículos -->
         <section class="content__articles">
-            <h2 class="articles__title">Últimos artículos</h2>
+            <h2 class="articles__title">PRODUCTOS DESTACADOS</h2>
             <div class="clearfix"></div>
+
             <article class="articles__article">
                 <div class="article__datos">
                     <span>Fecha: 01 de enero</span>
@@ -159,6 +141,7 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
             </article>
+
             <article class="articles__article">
                 <div class="article__datos">
                     <span>Fecha: 01 de febrero</span>
@@ -170,6 +153,7 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
             </article>
+
             <article class="articles__article">
                 <div class="article__datos">
                     <span>Fecha: 01 de marzo</span>
@@ -181,6 +165,7 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
             </article>
+
             <article class="articles__article">
                 <div class="article__datos">
                     <span>Fecha: 01 de abril</span>
@@ -192,6 +177,7 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
             </article>
+
             <article class="articles__article">
                 <div class="article__datos">
                     <span>Fecha: 01 de agosto</span>
@@ -203,9 +189,7 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
             </article>
-            <article class="articles__blog">
-                <a href="#">Ir al Blog</a>
-            </article>
+
         </section>
         <!-- fin de los Artículos -->
     </main>
@@ -250,7 +234,7 @@
                     </a>
                 </p>
                 <h5 class="footer__title">AUTOR</h5>
-                <p>&copy; Alumn@ - WEB</p>
+                <p>&copy; Francisco Cortés Pirson - WEB</p>
             </div>
         </div>
     </footer>
