--- a/Practica_1/index.html
+++ b/Practica_1/index.html
@@ -28,7 +28,6 @@
                 </ul>
             </nav>
         </div>
-        
     </header>
     <!-- fin de la Cabecera -->
     
@@ -76,166 +75,173 @@
             </div>
             <!-- fin de Tarjetas -->
         </section>
-        <!-- Inicio de Barra Lateral -->
         <div class="clearfix"></div>
-        <aside class="content__lateral">
-            <h3 class="lateral__title">BUSCAR</h3>
-            <div class="lateral__search">
-                <form>
-                    <input type="text">
-                    <input type="button" value="L" class="search__icon">
-                </form>
-            </div>
-            <h3 class="lateral__title">LOGIN</h3>
-            <div class="lateral__login aside-box">
-                <form>
-                    <label class="lateral-box__user aside-box__icon">U</label>
-                    <input type="email">
-                    <label class="lateral-box__password aside-box__icon">w</label>
-                    <input type="password">
-                    <input type="submit" value="Entrar">
-                    <input type="reset" value="Limpiar">
-                    <a href="#">Regístrate aquí</a>
-                    <a href="#">Has olvidado tu contraseña?</a>
-                </form>
-            </div>
-            <h3 class="lateral__title">REDES SOCIALES</h3>
-            <div class="lateral__social aside-box">
-                <div class="social__twitter">
-                    <a href="#" class="social__icon">t</a>
-                    <p class="social__overlay">
-                        Twitter
-                    </p>
-                </div>
-                <div class="social__facebook">
-                    <a href="#" class="social__icon">f</a>
-                    <p class="social__overlay">
-                        Facebook
-                    </p>
-                </div>
-                <div class="social__youtube">
-                    <a href="#" class="social__icon">y</a>
-                    <p class="social__overlay">
-                        Youtube
-                    </p>
-                </div>
-            </div>
-            <h3 class="lateral__title">PATROCINADORES</h3>
-            <div class="lateral__sponsors aside-box">
-            </div>
-        </aside>
-        <!-- fin de Aside -->
-        <!-- Inicio de los Artículos -->
-        <section class="content__articles">
-            <h2 class="articles__title">PRODUCTOS DESTACADOS</h2>
-            <div class="clearfix"></div>
+        <div class="main__container">
+            <!-- Inicio de los Artículos -->
+            <section class="content__articles">
+                <h2 class="articles__title">PRODUCTOS DESTACADOS</h2>
+                <div class="clearfix"></div>
+                <article class="articles__box">
+                    <article class="articles__article">
+                        <div class="article__datos">
+                            <span>Producto: Marisco</span>
+                        </div>
+                        <div class="article__img">
+                            <img src="./img/carabinero.jpeg" alt="carabinero">
+                        </div>
+                        <h4 class="article__subtitle">
+                            <a href="#">Carabineros</a>
+                        </h4>
+                        <div class="article__precio">
+                            <span>Desde: 45,00€ / 500g</span>
+                        </div>
+                    </article>
 
-            <article class="articles__article">
-                <div class="article__datos">
-                    <span>Fecha: 01 de enero</span>
-                    <span>Categoría: Pruebas</span>
-                </div>
-                <h4 class="article__subtitle">
-                    <a href="#">Título de artículo 1</a>
-                </h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
-            </article>
+                    <article class="articles__article">
+                        <div class="article__datos">
+                            <span>Producto: Marisco</span>
+                        </div>
+                        <div class="article__img">
+                            <img src="./img/concha-fina.jpg" alt="carabinero">
+                        </div>
+                        <h4 class="article__subtitle">
+                            <a href="#">Conchas Finas</a>
+                        </h4>
+                        <div class="article__precio">
+                            <span>Desde: 14,50€ / 500g</span>
+                        </div>
+                    </article>
 
-            <article class="articles__article">
-                <div class="article__datos">
-                    <span>Fecha: 01 de febrero</span>
-                    <span>Categoría: Pruebas</span>
-                </div>
-                <h4 class="article__subtitle">
-                    <a href="#">Título de artículo 2</a>
-                </h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
-            </article>
+                    <article class="articles__article">
+                        <div class="article__datos">
+                            <span>Producto: Marisco</span>
+                        </div>
+                        <div class="article__img">
+                            <img src="./img/cigala.jpg" alt="carabinero">
+                        </div>
+                        <h4 class="article__subtitle">
+                            <a href="#">Cigalas</a>
+                        </h4>
+                        <div class="article__precio">
+                            <span>Desde: 45,00€ / 500g</span>
+                        </div>
+                    </article>
 
-            <article class="articles__article">
-                <div class="article__datos">
-                    <span>Fecha: 01 de marzo</span>
-                    <span>Categoría: Pruebas</span>
-                </div>
-                <h4 class="article__subtitle">
-                    <a href="#">Título de artículo 3</a>
-                </h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
-            </article>
+                    <article class="articles__article">
+                        <div class="article__datos">
+                            <span>Producto: Pescado</span>
+                        </div>
+                        <div class="article__img">
+                            <img src="./img/sardina.jpeg" alt="carabinero">
+                        </div>
+                        <h4 class="article__subtitle">
+                            <a href="#">Sardinas</a>
+                        </h4>
+                        <div class="article__precio">
+                            <span>Desde: 4,50€ / 500g</span>
+                        </div>
+                    </article>
 
-            <article class="articles__article">
-                <div class="article__datos">
-                    <span>Fecha: 01 de abril</span>
-                    <span>Categoría: Pruebas</span>
-                </div>
-                <h4 class="article__subtitle">
-                    <a href="#">Título de artículo 4</a>
-                </h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
-            </article>
+                    <article class="articles__article">
+                        <div class="article__datos">
+                            <span>Producto: Pescado</span>
+                        </div>
+                        <div class="article__img">
+                            <img src="./img/calamar.jpg" alt="carabinero">
+                        </div>
+                        <h4 class="article__subtitle">
+                            <a href="#">Calamar Fresco</a>
+                        </h4>
+                        <div class="article__precio">
+                            <span>Desde: 11,40€ / und</span>
+                        </div>
+                    </article>
 
-            <article class="articles__article">
-                <div class="article__datos">
-                    <span>Fecha: 01 de agosto</span>
-                    <span>Categoría: Pruebas</span>
-                </div>
-                <h4 class="article__subtitle">
-                    <a href="#">Título de artículo 5</a>
-                </h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolores. Consequatur quis tenetur, modi quod quam repellat facilis minus molestias dicta eum ex voluptatibus itaque necessitatibus, possimus quas? Fugiat, veritatis!</p>
-            </article>
+                    <article class="articles__article">
+                        <div class="article__datos">
+                            <span>Producto: Pescado</span>
+                        </div>
+                        <div class="article__img">
+                            <img src="./img/lubina.jpeg" alt="carabinero">
+                        </div>
+                        <h4 class="article__subtitle">
+                            <a href="#">Lubina</a>
+                        </h4>
+                        <div class="article__precio">
+                            <span>Desde: 6,95€ / und</span>
+                        </div>
+                    </article>
 
-        </section>
-        <!-- fin de los Artículos -->
+                </article>
+
+            </section>
+            <!-- fin de los Artículos -->
+
+            <!-- Inicio de Barra Lateral -->
+            <aside class="content__lateral">
+                <div class="lateral__box box1">
+                    <h3 class="lateral__title">CANCION</h3>
+                    <div class="lateral__music">
+                        <audio src="./sound/CanciónMariscosRecio.mp3" autoplay loop controls></audio>
+                    </div>
+                </div>
+                <div class="lateral__box box2">
+                    <h3 class="lateral__title">LOGIN</h3>
+                    <div class="lateral__login aside-box">
+                        <form>
+                            <label class="lateral-box__user aside-box__icon">U</label>
+                            <input type="email">
+                            <label class="lateral-box__password aside-box__icon">w</label>
+                            <input type="password">
+                            <input type="submit" value="Entrar">
+                            <input type="reset" value="Limpiar">
+                            <a href="#">Regístrate aquí</a>
+                            <a href="#">Has olvidado tu contraseña?</a>
+                        </form>
+                    </div>
+                </div>
+                <div class="lateral__box box3">
+                    <h3 class="lateral__title">PATROCINADORES</h3>
+                    <div class="carousel__container">
+                        <img class="carousel__image imagen__uno" src="./img/tele-espeto.png" alt="Tele Espeto">
+                        <img class="carousel__image imagen__dos" src="./img/maxandhenry.png" alt="Max & Henry">
+                    </div>
+                </div>
+            </aside>
+            <!-- fin de Aside -->
+        </div>
+
     </main>
     <div class="clearfix"></div>
     <!-- Inicio de Pié de Página -->
     <footer class="content__footer">
         <div class="footer__wrap">
             <div class="footer__menuFooter">
-                <h5 class="footer__title">MENÚ</h5>
-                <ul class="footer__list">
-                    <li><a href="#">INICIO</a></li>
-                    <li><a href="#">BLOG</a></li>
-                    <li><a href="#">FORMACIÓN</a></li>
-                    <li><a href="#">CONTACTO</a></li>
+                <h5 class="footer__title">CONTACTO</h5>
+                <ul>
+                    <li class="footer__list"><a href="#">Correo: maricosrecio@percebesa.com</a></li>
+                    <li class="footer__list"><a href="#">Tlf: (+34) 666 666 666</a></li>
+                    <li class="footer__list"><a href="#">Av. de Montepinar, 28440, Guadalajara</a></li>
                 </ul>
             </div>
+
             <div class="footer__location">
-                <h5 class="footer__title">DÓNDE ESTAMOS?</h5>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3199.2996623515555!2d-4.462811723546774!3d36.69133637227841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72f9c45623d2c3%3A0x7a634bd28c0cf953!2sMEDAC%20Nova%20%F0%9F%A5%87%20Centro%20Tecnol%C3%B3gico%20de%20FP!5e0!3m2!1ses!2ses!4v1698701252334!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h5 class="footer__title">¿DÓNDE ESTAMOS?</h5>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3025.636490198909!2d-4.108204324889178!3d40.68197773945447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd410cfe75c8945f%3A0x659ea2d1f355715f!2sAv.%20de%20Montepinar%2C%2028440%20Guadarrama%2C%20Madrid!5e0!3m2!1ses!2ses!4v1731005578899!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
+
             <div class="footer__info">
-                <h5 class="footer__title">Desarrollado con</h5>
-                <p>
-                    <img src="img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png" alt="Creado con HTML y CSS">
-                </p>
-                <h5 class="footer__title">Optimizado para</h5>
-                <p class="footer__browsers">
-                    <a href="#">
-                        <img src="img/firefox-icon.png" alt="Firefox">
-                    </a>
-                    <a href="#">
-                        <img src="img/chrome.png" alt="Chrome">
-                    </a>
-                    <a href="#">
-                        <img src="img/safari.png" alt="Safari">
-                    </a>
-                    <a href="#">
-                        <img src="img/android.png" alt="Android">
-                    </a>
-                    <a href="#">
-                        <img src="img/Opera_256x256.png" alt="Opera">
-                    </a>
-                </p>
-                <h5 class="footer__title">AUTOR</h5>
-                <p>&copy; Francisco Cortés Pirson - WEB</p>
+                <h5 class="footer__title">ENLACES</h5>
+                <ul>
+                    <li class="footer__list"><a href="#">Mi Cuenta</a></li>
+                    <li class="footer__list"><a href="#">Contacto</a></li>
+                    <li class="footer__list"><a href="#">Blog</a></li>
+                    <li class="footer__list"><a href="#">Nosotros</a></li>
+                </ul>
             </div>
+        </div>
+        <div class="footer__copy">
+            <p> Copyright &copy; Francisco Cortés Pirson</p>
         </div>
     </footer>
     <!-- fin de Pié de Página -->
