--- a/Practica_1/index.html
+++ b/Practica_1/index.html
@@ -172,6 +172,57 @@
                         </div>
                     </article>
 
+                    
+
+                </article>
+
+                <h2 class="articles__title">EQUIPO</h2>
+                <article class="articles__box">
+
+                    
+                    <article class="articles__article">
+                        <div class="article__datos">
+                            <span>CEO</span>
+                        </div>
+                        <div class="article__img">
+                            <img src="./img/jesussin.jpg" alt="Jesus">
+                        </div>
+                        <h4 class="article__subtitle">
+                            <a href="#">Jesus</a>
+                        </h4>
+                        <div class="article__precio">
+                            <span>CEO & Backend Dev</span>
+                        </div>
+                    </article>
+                    <article class="articles__article">
+                        <div class="article__datos">
+                            <span>BBDD</span>
+                        </div>
+                        <div class="article__img">
+                            <img src="./img/visentin.jpeg" alt="Vicente">
+                        </div>
+                        <h4 class="article__subtitle">
+                            <a href="#">Vicente</a>
+                        </h4>
+                        <div class="article__precio">
+                            <span>BBDD</span>
+                        </div>
+                    </article>
+                    <article class="articles__article">
+                        <div class="article__datos">
+                            <span>Fullstack</span>
+                        </div>
+                        <div class="article__img">
+                            <img src="./img/fransisco.png" alt="Francisco">
+                        </div>
+                        <h4 class="article__subtitle">
+                            <a href="#">Francisco </a>
+                        </h4>
+                        <div class="article__precio">
+                            <span>Fullstack</span>
+                        </div>
+                    </article>
+
                 </article>
 
             </section>
@@ -179,13 +230,13 @@
 
             <!-- Inicio de Barra Lateral -->
             <aside class="content__lateral">
-                <div class="lateral__box box1">
+                <div class="lateral__box">
                     <h3 class="lateral__title">CANCION</h3>
                     <div class="lateral__music">
                         <audio src="./sound/CanciónMariscosRecio.mp3" autoplay loop controls></audio>
                     </div>
                 </div>
-                <div class="lateral__box box2">
+                <div class="lateral__box">
                     <h3 class="lateral__title">LOGIN</h3>
                     <div class="lateral__login aside-box">
                         <form>
@@ -200,7 +251,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="lateral__box box3">
+                <div class="lateral__box">
                     <h3 class="lateral__title">PATROCINADORES</h3>
                     <div class="carousel__container">
                         <img class="carousel__image imagen__uno" src="./img/tele-espeto.png" alt="Tele Espeto">
