--- a/11-JQuery/botones.html
+++ b/11-JQuery/botones.html
@@ -7,10 +7,11 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" type="text/javascript"></script>
 </head>
 <body>
-    <input id="texto" type="text">
+    <input id="texto" type="text" disabled>
     <button id="1">1</button>
     <button id="2">2</button>
     <button id="3">3</button>
+    <button>Borrar</button>
 
     <script src="./JS/botones.js"></script>
 </body>
