--- a/Practicas/Practica_1/index.html
+++ b/Practicas/Practica_1/index.html
@@ -272,7 +272,7 @@
                 <ul>
                     <li class="footer__list"><a href="#">Correo: maricosrecio@percebesa.com</a></li>
                     <li class="footer__list"><a href="#">Tlf: (+34) 666 666 666</a></li>
-                    <li class="footer__list"><a href="#">Av. de Montepinar, 28440, Guadalajara</a></li>
+                    <li class="footer__list"><aº href="#">Av. de Montepinar, 28440, Guadalajara</aº></li>
                 </ul>
             </div>
 
